@@ -1,11 +1,11 @@
 /*
- * Copyright 2009-2017 the original author or authors.
+ * Copyright 2009-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *     https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -40,7 +40,7 @@ public class StringSourceBuffer implements ISourceBuffer {
         if (sourceCode.length == 0) {
             return offsets;
         }
-        offsets.add(new Integer(0));
+        offsets.add(Integer.valueOf(0));
 
         int ch;
         for (int i = 0; i < sourceCode.length; i += 1) {
@@ -49,15 +49,15 @@ public class StringSourceBuffer implements ISourceBuffer {
                 if (i + 1 < sourceCode.length) {
                     ch = sourceCode[i + 1];
                     if (ch == '\n') {
-                        offsets.add(new Integer(++i + 1));
+                        offsets.add(Integer.valueOf(++i + 1));
                     } else {
-                        offsets.add(new Integer(i + 1));
+                        offsets.add(Integer.valueOf(i + 1));
                     }
                 } else {
-                    offsets.add(new Integer(i + 1));
+                    offsets.add(Integer.valueOf(i + 1));
                 }
             } else if (ch == '\n') {
-                offsets.add(new Integer(i + 1));
+                offsets.add(Integer.valueOf(i + 1));
             }
         }
 
